Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-21580

Declaring default property avoids signals from being emitted

XMLWordPrintable

      declaring a default property to data on a base component makes aliased property not trigger signals anymore.
      easier understood in the attached example: the onPageIndexChanged signal should be triggered, but isn't.

        1. contentSignal.tgz
          0.5 kB
        2. qtbug_21580.diff
          15 kB
        For Gerrit Dashboard: QTBUG-21580
        # Subject Branch Project Status CR V

            glwatson Glenn Watson
            lscunha Leonardo Sobral Cunha (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes