src/declarative/qml/qdeclarativevmemetaobject.cpp
@@ -94,6 +94,17 @@ private:
     inline void cleanup();
 };
 
+class QDeclarativeVMEMetaObjectEndpoint : public QDeclarativeNotifierEndpoint
+{
+public:
+    QDeclarativeVMEMetaObjectEndpoint();
+    static void vmecallback(QDeclarativeNotifierEndpoint *);
+    void tryConnect();
+
+    QFlagPointer<QDeclarativeVMEMetaObject> metaObject;
+};
+
+
 QDeclarativeVMEVariant::QDeclarativeVMEVariant()
 : type(QVariant::Invalid)
 {
@@ -378,13 +389,50 @@ void QDeclarativeVMEVariant::setValue(const QJSValue &v)
     }
 }
 
+QDeclarativeVMEMetaObjectEndpoint::QDeclarativeVMEMetaObjectEndpoint()
+{
+    callback = &vmecallback;
+}
+
+void QDeclarativeVMEMetaObjectEndpoint::vmecallback(QDeclarativeNotifierEndpoint *e)
+{
+    QDeclarativeVMEMetaObjectEndpoint *vmee = static_cast<QDeclarativeVMEMetaObjectEndpoint*>(e);
+    vmee->tryConnect();
+}
+
+void QDeclarativeVMEMetaObjectEndpoint::tryConnect()
+{
+    if (metaObject.flag())
+        return;
+
+    int aliasId = this - metaObject->aliasEndpoints;
+
+    QDeclarativeVMEMetaData::AliasData *d = metaObject->metaData->aliasData() + aliasId;
+    if (!d->isObjectAlias()) {
+        QDeclarativeContextData *ctxt = metaObject->ctxt;
+        QObject *target = ctxt->idValues[d->contextIdx].data();
+        if (!target)
+            return;
+
+        QMetaProperty prop = target->metaObject()->property(d->propertyIndex());
+        if (prop.hasNotifySignal()) {
+            int sigIdx = metaObject->methodOffset + aliasId + metaObject->metaData->propertyCount;
+            QDeclarativePropertyPrivate::connect(target, prop.notifySignalIndex(),
+                                                 metaObject->object, sigIdx);
+        }
+    }
+
+    metaObject.setFlag();
+}
+
 QDeclarativeVMEMetaObject::QDeclarativeVMEMetaObject(QObject *obj,
                                                      const QMetaObject *other, 
                                                      const QDeclarativeVMEMetaData *meta,
                                                      QDeclarativeCompiledData *cdata)
 : QV8GCCallback::Node(GcPrologueCallback), object(obj), compiledData(cdata),
   ctxt(QDeclarativeData::get(obj, true)->outerContext), metaData(meta), data(0),
-  firstVarPropertyIndex(-1), varPropertiesInitialized(false), v8methods(0), parent(0)
+  aliasEndpoints(0), firstVarPropertyIndex(-1), varPropertiesInitialized(false),
+  v8methods(0), parent(0)
 {
     compiledData->addref();
 
@@ -423,6 +471,7 @@ QDeclarativeVMEMetaObject::~QDeclarativeVMEMetaObject()
     compiledData->release();
     delete parent;
     delete [] data;
+    delete [] aliasEndpoints;
 
     for (int ii = 0; v8methods && ii < metaData->methodCount; ++ii) {
         qPersistentDispose(v8methods[ii]);
@@ -974,25 +1023,20 @@ bool QDeclarativeVMEMetaObject::aliasTarget(int index, QObject **target, int *co
 void QDeclarativeVMEMetaObject::connectAlias(int aliasId)
 {
     if (!aConnected.testBit(aliasId)) {
-        aConnected.setBit(aliasId);
 
-        QDeclarativeContext *context = ctxt->asQDeclarativeContext();
-        QDeclarativeContextPrivate *ctxtPriv = QDeclarativeContextPrivate::get(context);
+        if (!aliasEndpoints)
+            aliasEndpoints = new QDeclarativeVMEMetaObjectEndpoint[metaData->aliasCount];
+
+        aConnected.setBit(aliasId);
 
         QDeclarativeVMEMetaData::AliasData *d = metaData->aliasData() + aliasId;
 
-        QObject *target = ctxtPriv->data->idValues[d->contextIdx].data();
-        if (!target) 
-            return;
+        QDeclarativeVMEMetaObjectEndpoint *endpoint = aliasEndpoints + aliasId;
+        endpoint->metaObject = this;
 
-        int sigIdx = methodOffset + aliasId + metaData->propertyCount;
-        QMetaObject::connect(context, d->contextIdx + ctxtPriv->notifyIndex, object, sigIdx);
+        endpoint->connect(&ctxt->idValues[d->contextIdx].bindings);
 
-        if (!d->isObjectAlias()) {
-            QMetaProperty prop = target->metaObject()->property(d->propertyIndex());
-            if (prop.hasNotifySignal())
-                QDeclarativePropertyPrivate::connect(target, prop.notifySignalIndex(), object, sigIdx);
-        }
+        endpoint->tryConnect();
     }
 }
 
