src/declarative/qml/ftw/ftw.pri
@@ -13,6 +13,7 @@ HEADERS +=  \
     $$PWD/qrecursionwatcher_p.h \
     $$PWD/qdeletewatcher_p.h \
     $$PWD/qrecyclepool_p.h \
+    $$PWD/qflagpointer_p.h \
 
 SOURCES += \
     $$PWD/qintrusivelist.cpp \
